--- a/master-script.yml
+++ b/master-script.yml
@@ -2,7 +2,7 @@
 AWSTemplateFormatVersion: 2010-09-09
 
 
-Description: Master Teamplate that creates cross account role(IAM), VPC and EC2 instances
+Description: VPC and EC2 instances
 
 
 Parameters:
